--- a/HTML/user-sign-up.html
+++ b/HTML/user-sign-up.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/user-sign-up.css">
+    <link rel="stylesheet" href="../CSS/user-sign-up.css">
     <script src="https://kit.fontawesome.com/5f69afeadf.js" crossorigin="anonymous"></script>
-    <link rel="shortcun icon" type="image/png" href="/Images/xylo-logo-favicon.png">
+    <link rel="shortcun icon" type="image/png" href="../Images/xylo-logo-favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
@@ -19,7 +19,7 @@
 
     <!-- Navbar -->
     <header>
-        <img src="/Images/Xylo-logo.png" width="191" class="header-logo">
+        <img src="../Images/Xylo-logo.png" width="191" class="header-logo">
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
